Fix the text overflow bug

--- a/browser/app/less/main.less
+++ b/browser/app/less/main.less
@@ -44,3 +44,8 @@
     margin-top: 20px;
     color: black;
 }
+.alertmessage{
+    display: inline-block;
+    white-space: normal;
+    word-break: break-all;
+}
